[tool.poetry]
name = "path_planning_algorithms"
version = "0.0.1"
description = "Visualise how different algorithms navigate in a map"
authors = ["Sanjana Kumari <sanjana01999@gmail.com>"]
readme = "README.md"
packages = [{include = "path_planning_algorithms"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.0"
pygame-gui = "^0.6.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "path_planning_algorithms.main:main"